indian flag not showing bug

--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ body {
   padding: 1.2rem 0.8rem;
 }
 .main-country-link .india-flag {
-  background-image: url("../../assets/icons/icons8-india-48.png");
+  background-image: url("./../assets/icons/icons8-india-48.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 18px;
