--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -110,7 +110,7 @@
   padding: 1.2rem 0.8rem;
 
   .india-flag {
-    background-image: url('../../assets/icons/icons8-india-48.png');
+    background-image: url('./../assets/icons/icons8-india-48.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 18px;
